--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.90.0"
 uvicorn = {extras = ["standard"], version = "^0.20.0"}
+sqlmodel = "^0.0.8"
+alembic = "^1.9.3"
 
 
 [build-system]
