--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,15 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-RUN pip install poetry
+# poetryのインストール先の指定
+ENV POETRY_HOME=/opt/poetry
+
+# poetryインストール
+RUN pip install poetry && \
+    poetry config virtualenvs.create false
+
 COPY pyproject.toml* poetry.lock* ./
-RUN poetry config virtualenvs.in-project true
+
 RUN if [ -f pyproject.toml ]; then poetry install; fi
 
 ENTRYPOINT ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload"]
